--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,85 @@
+//Colors
+$neutral-0: hsl(0, 0%, 100%);
+$neutral-300: hsl(252, 6%, 83%);
+$neutral-500: hsl(245, 15%, 58%);
+$neutral-700: hsl(245, 19%, 35%);
+$neutral-900: hsl(248, 70%, 10%);
 
+$orange-500: hsl(7, 88%, 67%);
+$orange-700: hsl(7, 71%, 60%);
 
+//Typography
 
-.attribution { font-size: 11px; text-align: center; }
+//Body Copy
+$size: 20px;
+
+//Font
+$family: Inconsolata, sans-serif;
+$lighter: 400;
+$light: 500;
+$bold: 700;
+$bolder: 800;
+
+//Media
+$sm: 32rem;
+$md: 68rem;
+
+* , *::before, *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    appearance: none;
+}
+
+body {
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+    row-gap: 3rem;
+    color: $neutral-0;
+    font-family: $family;
+    font-size: $size;
+    padding-block: 5rem;
+    background-color: $neutral-900;
+    background-repeat: no-repeat, repeat-x, no-repeat, no-repeat, no-repeat, no-repeat;
+
+    @media screen and (max-width: $sm){
+        background-image: url("../images/pattern-circle.svg"), url("../images/pattern-lines.svg"), url("../images/pattern-circle.svg"), url("../images/pattern-squiggly-line-top.svg"), url("../images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("../images/background-mobile.png");
+        background-position: 50vw 80vh, top, -5vh -5%, top right, bottom left, center;
+        background-size: 8rem, contain, 8rem, 8rem, 25rem, cover;
+    }
+    @media screen and (max-width: $md) and (min-width: $sm){
+        background-image: url("../images/pattern-circle.svg"), url("../images/pattern-lines.svg"), url("../images/pattern-circle.svg"), url("../images/pattern-squiggly-line-top.svg"), url("../images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("../images/background-tablet.png");
+        background-position: 65vw 75vh, top, 5vh -10%, top right, bottom left, center;
+        background-size: 10rem, contain, 10rem, 15rem, 30rem, cover;
+    }
+    @media screen and (min-width: $md){
+        background-image: url("../images/pattern-circle.svg"), url("../images/pattern-lines.svg"), url("../images/pattern-circle.svg"), url("../images/pattern-squiggly-line-top.svg"), url("../images/pattern-squiggly-line-bottom-desktop.svg"), url("../images/background-desktop.png");
+        background-position: 65vw 50vh, top, 10vh -15%, top right, bottom left, center;
+        background-size: 10rem, contain, 10rem, 20rem, 35rem, cover;
+    }
+}
+
+.header {
+    display: grid;
+    place-items: center;
+    gap: 3rem;
+    text-align: center;
+    padding-inline: 1.5rem;
+
+    &__image { width: fit-content; }
+    &__subsection {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .header { max-width: 90vw;
+        &__subsection__title { font-size: $size*1.5; } } }
+
+@media screen and (min-width: $sm) { .header { max-width: 38rem; } }
+
+.attribution { display: none; font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
