--- a/assets/css/02_ticket.css
+++ b/assets/css/02_ticket.css
@@ -1,3 +1,198 @@
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  appearance: none;
+}
 
+body {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  row-gap: 3rem;
+  color: hsl(0, 0%, 100%);
+  font-family: Inconsolata, sans-serif;
+  font-size: 20px;
+  padding-block: 5rem;
+  background-color: hsl(248, 70%, 10%);
+  background-repeat: no-repeat, repeat-x, no-repeat, no-repeat, no-repeat, no-repeat;
+}
+@media screen and (max-width: 32rem) {
+  body {
+    background-image: url("../images/pattern-circle.svg"), url("../images/pattern-lines.svg"), url("../images/pattern-circle.svg"), url("../images/pattern-squiggly-line-top.svg"), url("../images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("../images/background-mobile.png");
+    background-position: 50vw 80vh, top, -5vh -5%, top right, bottom left, center;
+    background-size: 8rem, contain, 8rem, 8rem, 25rem, cover;
+  }
+}
+@media screen and (max-width: 68rem) and (min-width: 32rem) {
+  body {
+    background-image: url("../images/pattern-circle.svg"), url("../images/pattern-lines.svg"), url("../images/pattern-circle.svg"), url("../images/pattern-squiggly-line-top.svg"), url("../images/pattern-squiggly-line-bottom-mobile-tablet.svg"), url("../images/background-tablet.png");
+    background-position: 65vw 75vh, top, 5vh -10%, top right, bottom left, center;
+    background-size: 10rem, contain, 10rem, 15rem, 30rem, cover;
+  }
+}
+@media screen and (min-width: 68rem) {
+  body {
+    background-image: url("../images/pattern-circle.svg"), url("../images/pattern-lines.svg"), url("../images/pattern-circle.svg"), url("../images/pattern-squiggly-line-top.svg"), url("../images/pattern-squiggly-line-bottom-desktop.svg"), url("../images/background-desktop.png");
+    background-position: 65vw 50vh, top, 10vh -15%, top right, bottom left, center;
+    background-size: 10rem, contain, 10rem, 20rem, 35rem, cover;
+  }
+}
+
+.header {
+  display: grid;
+  place-items: center;
+  gap: 3rem;
+  text-align: center;
+  padding-inline: 1.5rem;
+}
+.header__image {
+  width: fit-content;
+}
+.header__subsection {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 32rem) {
+  .header {
+    max-width: 90vw;
+  }
+  .header__subsection__title {
+    font-size: 30px;
+  }
+}
+@media screen and (min-width: 32rem) {
+  .header {
+    max-width: 38rem;
+  }
+}
+.attribution {
+  display: none;
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+
+.ticket {
+  display: grid;
+  grid-template-columns: 6fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding: 1rem;
+  background: url("../images/pattern-ticket.svg") no-repeat center;
+}
+.ticket__header {
+  grid-row: 1;
+  grid-column: 1;
+}
+.ticket__infos {
+  grid-column: 1;
+  grid-row: 2;
+  gap: 1rem;
+  display: grid;
+  place-items: start;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 6fr;
+}
+.ticket__infos__image {
+  max-height: 5.25rem;
+  grid-row: 1/3;
+  grid-column: 1;
+  border-radius: 10px;
+  place-self: center;
+}
+.ticket__infos__name {
+  grid-row: 1;
+  grid-column: 2;
+  font-size: 24px;
+  align-self: end;
+}
+.ticket__infos__github {
+  grid-row: 2;
+  grid-column: 2;
+}
+.ticket__infos__github::before {
+  content: " ";
+  padding: 0.7rem;
+  margin-right: 0.2rem;
+  background: url("../images/icon-github.svg") no-repeat center;
+  background-size: contain;
+}
+.ticket__code {
+  grid-column: 2;
+  grid-row: 1/3;
+  writing-mode: vertical-rl;
+  text-align: center;
+  color: hsl(245, 15%, 58%);
+}
+
+.first-name {
+  background: #f37362;
+  background: linear-gradient(90deg, rgb(243, 115, 98) 0%, rgb(255, 255, 255) 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  /* Pour certains navigateurs modernes */
+  background-clip: text;
+  color: transparent;
+}
+
+.email {
+  color: hsl(7, 88%, 67%);
+  font-weight: 700;
+}
+
+@media screen and (max-width: 32rem) {
+  .ticket {
+    width: 18.75rem;
+    height: 8.75rem;
+    background-size: 18.75rem 8.75rem;
+    font-size: 14px;
+  }
+  .ticket img {
+    width: 8rem;
+  }
+  .ticket__infos {
+    gap: 0.5rem;
+  }
+  .ticket__infos__image {
+    max-width: 3.75rem;
+  }
+  .ticket__infos__name {
+    font-size: 16px;
+  }
+  .ticket__infos__github {
+    font-size: 10px;
+  }
+  .ticket__infos__github::before {
+    padding: 0.55rem;
+  }
+  .ticket__code {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 68rem) and (min-width: 32rem) {
+  .ticket {
+    width: 28.125rem;
+    height: 13.125rem;
+    background-size: 28.125rem 13.125rem;
+  }
+  .ticket__code {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 68rem) {
+  .ticket {
+    width: 37.5rem;
+    height: 17.5rem;
+    padding: 2rem;
+  }
+  .ticket__code {
+    font-size: 30px;
+  }
+}
 
 /*# sourceMappingURL=02_ticket.css.map */
