--- a/assets/css/01_form.scss
+++ b/assets/css/01_form.scss
@@ -65,13 +65,19 @@ $transparent-bg: rgba(19, 19, 19, 0.5);
             background-color: $transparent-bg;
             color: white;
             padding-left: 1rem;
+            outline: none;
 
-            &:focus { outline: 2px solid $neutral-300; }
+            &:focus {
+                border: 2px solid $neutral-300;
+            }
             &::placeholder { color: white; }
         }
     }
-    button {
-        height: 2.8rem;
+    &__button {
+        text-decoration: none;
+        text-align: center;
+        color: black;
+        padding-block: 1rem;
         border: none;
         border-radius: 8px;
         background-color: $orange-700;
@@ -79,6 +85,21 @@ $transparent-bg: rgba(19, 19, 19, 0.5);
         font-size: $size*0.8;
 
         &:hover { opacity: 0.8; }
+    }
+}
+
+.error {
+    display: none;
+    font-size: $size*0.6;
+    color: $orange-700;
+
+    &::before {
+        content: "";
+        opacity: 0.5;
+        padding: 0.6rem;
+        margin-right: 0.2rem;
+        background: url("../images/icon-info-red.png") no-repeat center;
+        background-size: contain;
     }
 }
 
