--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,6 +61,7 @@ body {
 }
 
 .header {
+    animation: disappear-reappear-1 600ms backwards;
     display: grid;
     place-items: center;
     gap: 3rem;
@@ -83,3 +84,24 @@ body {
 
 .attribution { display: none; font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+@keyframes disappear-reappear-1 {
+    from {
+        transform: scale(0);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+@keyframes disappear-reappear-2 {
+    from {
+        transform: translateY(25%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
